# rust-list-ec2-instances

./: Cargo.toml
src/: list_ec2_instances.rs  main.rs
